IGNITE-15414 Schema validation refactoring with configuration validators (#360)