@@ -22,7 +22,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
@@ -39,6 +38,7 @@ import org.apache.ignite.configuration.schemas.rest.RestConfiguration;
 import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
 import org.apache.ignite.configuration.schemas.store.DataStorageConfiguration;
+import org.apache.ignite.configuration.schemas.table.ColumnTypeValidator;
 import org.apache.ignite.configuration.schemas.table.TableValidator;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
 import org.apache.ignite.internal.baseline.BaselineManager;
@@ -53,6 +53,7 @@ import org.apache.ignite.internal.metastorage.server.persistence.RocksDBKeyValue
 import org.apache.ignite.internal.processors.query.calcite.QueryProcessor;
 import org.apache.ignite.internal.processors.query.calcite.SqlQueryProcessor;
 import org.apache.ignite.internal.raft.Loza;
+import org.apache.ignite.internal.schema.configuration.ColumnTypeValidatorImpl;
 import org.apache.ignite.internal.schema.configuration.TableValidatorImpl;
 import org.apache.ignite.internal.table.distributed.TableManager;
 import org.apache.ignite.internal.vault.VaultManager;
@@ -148,7 +149,7 @@ public class IgniteImpl implements Ignite {
         vaultMgr = createVault(workDir);
 
         nodeCfgMgr = new ConfigurationManager(
-            Arrays.asList(
+            List.of(
                 NetworkConfiguration.KEY,
                 NodeConfiguration.KEY,
                 RestConfiguration.KEY,
@@ -178,14 +179,16 @@ public class IgniteImpl implements Ignite {
             new RocksDBKeyValueStorage(workDir.resolve(METASTORAGE_DB_PATH))
         );
 
-        // TODO: IGNITE-15414 Schema validation refactoring with configuration validators.
         clusterCfgMgr = new ConfigurationManager(
-            Arrays.asList(
+            List.of(
                 ClusterConfiguration.KEY,
                 TablesConfiguration.KEY,
                 DataStorageConfiguration.KEY
             ),
-            Map.of(TableValidator.class, Set.of(TableValidatorImpl.INSTANCE)),
+            Map.of(
+                TableValidator.class, Set.of(TableValidatorImpl.INSTANCE),
+                ColumnTypeValidator.class, Set.of(ColumnTypeValidatorImpl.INSTANCE)
+            ),
             new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
             Collections.singletonList(ExtendedTableConfigurationSchema.class),
             List.of()
